{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 149,
  "lineage": "c36642e5-9ecf-833e-38a6-d925aa0eb6d4",
  "resources": [
    {
      "module": "module.amazon_mq",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mq_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-027f5f81a7e58c87f",
            "description": "Allow MQ traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-027f5f81a7e58c87f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/16"
                ],
                "description": "Allow broker traffic",
                "from_port": 61617,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 61617
              }
            ],
            "name": "feature-app-mq-prod-cluster-mq-sg",
            "name_prefix": "",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-mq",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-mq",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-001bca49d8be4c77a",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-001bca49d8be4c77a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0219169a44db3e252"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "neowise-app-cluster-prod-cluster-20251126151323525100000003",
            "name_prefix": "neowise-app-cluster-prod-cluster-",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-prod-cluster",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-prod-cluster",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "b1e46ce3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-0faa3cb04fe821d36",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0faa3cb04fe821d36",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b998ec5e9aa416bb"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "neowise-app-cluster-uat-cluster-20251126135816047700000006",
            "name_prefix": "neowise-app-cluster-uat-cluster-",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "uat",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-uat-cluster",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "uat",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-uat-cluster",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-0219169a44db3e252",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0219169a44db3e252",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 10251/tcp webhook",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-001bca49d8be4c77a"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "neowise-app-cluster-prod-node-20251126151322885300000002",
            "name_prefix": "neowise-app-cluster-prod-node-",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-prod-node",
              "Project": "neowise-payment-app",
              "kubernetes.io/cluster/neowise-app-cluster-prod": "owned"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-prod-node",
              "Project": "neowise-payment-app",
              "kubernetes.io/cluster/neowise-app-cluster-prod": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 0,
          "deposed": "bbe46564",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-0b998ec5e9aa416bb",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b998ec5e9aa416bb",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 10251/tcp webhook",
                "from_port": 10251,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 10251
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0faa3cb04fe821d36"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "neowise-app-cluster-uat-node-20251126135816044600000005",
            "name_prefix": "neowise-app-cluster-uat-node-",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "uat",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-uat-node",
              "Project": "neowise-payment-app",
              "kubernetes.io/cluster/neowise-app-cluster-uat": "owned"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "uat",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-cluster-uat-node",
              "Project": "neowise-payment-app",
              "kubernetes.io/cluster/neowise-app-cluster-uat": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3526542851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-001bca49d8be4c77a",
            "security_group_rule_id": "sgr-0d58999228838090b",
            "self": false,
            "source_security_group_id": "sg-0219169a44db3e252",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "deposed": "add90b40",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1255655013",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0faa3cb04fe821d36",
            "security_group_rule_id": "sgr-0b635598fbf32297d",
            "self": false,
            "source_security_group_id": "sg-0b998ec5e9aa416bb",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-2644901445",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-0025b5276abdceaee",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_all",
          "deposed": "58201527",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-4289396012",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0f0f37169b5d19f83",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-1022183464",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-02b78ad44a887f718",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_10251_webhook",
          "deposed": "04b947c1",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 10251/tcp webhook",
            "from_port": 10251,
            "id": "sgrule-2512266192",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-05ef86f400e4fe08c",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 10251,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-3691458885",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-07c63f34e325aa809",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "deposed": "3c487cd3",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1143857172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0423a7c8445ba5cc5",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-1232994749",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-03a6af5773029fca0",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "deposed": "22cf4148",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-2212976728",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0059f4a097224be4f",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-2151441963",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-0a61b30cbca0699e1",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "deposed": "f98fc8a8",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-1252343758",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-07f6423647a59a2c7",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-2472565258",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-025f42fb442c5c82a",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "deposed": "129cec21",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-1509491695",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0c6b146058fa6c697",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-4156647873",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-00961e86d765552ce",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "deposed": "053ac49a",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1029189668",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0c85c9672ef7da678",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-144971859",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-009975750717394da",
            "self": false,
            "source_security_group_id": "sg-001bca49d8be4c77a",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "deposed": "ddc4a103",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-2717348779",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-045dc929e5dddae9f",
            "self": false,
            "source_security_group_id": "sg-0faa3cb04fe821d36",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-791595343",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-0f35f597b8850cd3b",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "deposed": "4d84d663",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-2838806496",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-082e290ed7313d74e",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3114230308",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-0666048c2a3393c8d",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "deposed": "6ab8a4cb",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3671142610",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0f0024bc288ff01a8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-499171787",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-south-1",
            "security_group_id": "sg-0219169a44db3e252",
            "security_group_rule_id": "sgr-04397adb454b8a567",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "deposed": "bc578300",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-2123273021",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "udp",
            "region": "ap-south-1",
            "security_group_id": "sg-0b998ec5e9aa416bb",
            "security_group_rule_id": "sgr-0e342f98055da2e2f",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks.module.eks_managed_node_group[\"nodes\"]",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bastion-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-0b12a1df41d86081c",
            "description": "EC2 server security group",
            "egress": [],
            "id": "sg-0b12a1df41d86081c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "neowise-app-bastion-server-prod-sg",
            "name_prefix": "",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-06277ec9912147940",
            "description": "EC2 server security group",
            "egress": [],
            "id": "sg-06277ec9912147940",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "neowise-app-server-prod-sg",
            "name_prefix": "",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:security-group/sg-0a94d2357e4042b5a",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a94d2357e4042b5a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "neowise-app-rds-prod-sg",
            "name_prefix": "",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-rds-prod-sg",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-rds-prod-sg",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-06cc5ebfb8571a147",
            "arn": "arn:aws:ec2:ap-south-1:071909720457:instance/i-024fbf4a8b952cac2",
            "associate_public_ip_address": false,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-024fbf4a8b952cac2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.medium",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0009eef43ebfc795e"
              }
            ],
            "primary_network_interface_id": "eni-0009eef43ebfc795e",
            "private_dns": "ip-10-0-2-127.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.127",
            "region": "ap-south-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0497f998d984ed2b3",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e5f9cff7b8a6a437",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-ec2",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-ec2",
              "Project": "neowise-payment-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06277ec9912147940"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.security-group.aws_security_group.private-server",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8f566bbfdaee792",
            "arn": "arn:aws:ec2:ap-south-1:071909720457:elastic-ip/eipalloc-0d8f566bbfdaee792",
            "association_id": "eipassoc-0713ce8407bbe9dc0",
            "domain": "vpc",
            "id": "eipalloc-0d8f566bbfdaee792",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0623764380e2a2e01",
            "private_dns": "ip-10-0-0-144.ap-south-1.compute.internal",
            "private_ip": "10.0.0.144",
            "public_dns": "ec2-15-206-198-54.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.198.54",
            "public_ipv4_pool": "amazon",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-eip-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-eip-prod",
              "Project": "neowise-payment-app"
            }
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:internet-gateway/igw-0f75ca6ebb080fe0a",
            "id": "igw-0f75ca6ebb080fe0a",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-igw-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-igw-prod",
              "Project": "neowise-payment-app"
            },
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d8f566bbfdaee792",
            "association_id": "eipassoc-0713ce8407bbe9dc0",
            "connectivity_type": "public",
            "id": "nat-085d61ded3841df6e",
            "network_interface_id": "eni-0623764380e2a2e01",
            "private_ip": "10.0.0.144",
            "public_ip": "15.206.198.54",
            "region": "ap-south-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-070ac295fc11fe207",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-nat-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-nat-prod",
              "Project": "neowise-payment-app"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:route-table/rtb-0b3586c1c5df3482d",
            "id": "rtb-0b3586c1c5df3482d",
            "owner_id": "071909720457",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-085d61ded3841df6e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-route-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-route-prod",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.public",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:route-table/rtb-0a0cf99b18010ba53",
            "id": "rtb-0a0cf99b18010ba53",
            "owner_id": "071909720457",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f75ca6ebb080fe0a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-public-route-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-public-route-prod",
              "Project": "neowise-payment-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07cb714a6c2853393",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b3586c1c5df3482d",
            "subnet_id": "subnet-0e5f9cff7b8a6a437"
          },
          "dependencies": [
            "module.vpc.aws_eip.public",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-011eb54fa812603a1",
            "region": "ap-south-1",
            "route_table_id": "rtb-0b3586c1c5df3482d",
            "subnet_id": "subnet-05949b50e166e0821"
          },
          "dependencies": [
            "module.vpc.aws_eip.public",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d0546435e407ceb4",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a0cf99b18010ba53",
            "subnet_id": "subnet-070ac295fc11fe207"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-036a14a82a4f6d2fb",
            "region": "ap-south-1",
            "route_table_id": "rtb-0a0cf99b18010ba53",
            "subnet_id": "subnet-0b8914c1d6e9e7342"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:subnet/subnet-0e5f9cff7b8a6a437",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e5f9cff7b8a6a437",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071909720457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-subnet-1-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-subnet-1-prod",
              "Project": "neowise-payment-app"
            },
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:subnet/subnet-05949b50e166e0821",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05949b50e166e0821",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "071909720457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-subnet-2-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-private-subnet-2-prod",
              "Project": "neowise-payment-app"
            },
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:subnet/subnet-070ac295fc11fe207",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-070ac295fc11fe207",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "071909720457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-public-subnet-1-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-public-subnet-1-prod",
              "Project": "neowise-payment-app"
            },
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:subnet/subnet-0b8914c1d6e9e7342",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b8914c1d6e9e7342",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "071909720457",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-public-subnet-2-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-public-subnet-2-prod",
              "Project": "neowise-payment-app"
            },
            "vpc_id": "vpc-060e6d262005d5574"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:071909720457:vpc/vpc-060e6d262005d5574",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d28d631bfed553c2",
            "default_route_table_id": "rtb-07dab5b3aad2b154e",
            "default_security_group_id": "sg-014d9e89e9af83f32",
            "dhcp_options_id": "dopt-0722d57ff2708ce0f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-060e6d262005d5574",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07dab5b3aad2b154e",
            "owner_id": "071909720457",
            "region": "ap-south-1",
            "tags": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-vpc-prod",
              "Project": "neowise-payment-app"
            },
            "tags_all": {
              "Contact": "infra-issues@neowise.com",
              "Env": "prod",
              "ManagedBy": "Terraform",
              "Name": "neowise-app-vpc-prod",
              "Project": "neowise-payment-app"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}